	  (2015-12-13).
	* apps/examples/pca9635:  Add a simple test of PCA9635PW PWM LED
	  driver.  From Alan Carvalho de Assis (2015-12-15).
	* apps/examples/ostest:  Add a test of POSIX timers using
	  SIGEV_THREAD (2015-12-30).
	* apps/nshlib:  Add a 'time' command that may be used to time the
	  execution of other commands (2015-12-31).
	* apps/netutils/netlib:  Add netlib_get_dripv4addr() and
	  netlib_get_ipv4netmask().  From Pelle Windestam (2016-01-14).
	* apps/fsutils/passwd: Utility library for accessing a password
	  file like /etc/passwd (2016-01-19).
	* apps/nshlib/nsh_passwdcmds.c:  Add useradd, userdel, and passwd
	  commands (2019-01-20).
	* apps/nshlib:  Now supports a Message of the Day (MOTD) that will
	  be presented after the NSH greeting (2015-01-20).
	* apps/nshlib:  All sessions may be protected with logins using
	  the encrypted password in /etc/passwd (2016-01-20).
	* apps/fsutils/inifile:  Move system/inifile to fsutils/inifile
	  where it seems to fit in better (2016-01-20).
	* apps/nshlib: Extend logins.  Added: Optional platform-specific
	  function to perform password verification and optional delay
	  after each failed login attempt (2016-01-22).
	* system/ramtron:  Removed completely.  It inappropriately used
	  an internal OS interface (up_spiinitialize), that has been
	  obsoleted.  That's what happens when you violate interface
	  boundaries between the application and the OS (2016-01-27).
	* apps/platform/Makefile:  Use a relative path to the board
	  directory link rather than the absolute path.  For Cygwin, the
	  absolute would would need converted with cygpath.  But just using
	  the relative path is a simpler solution (2016-01-27).

7.15 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/exmaples/chat and apps/netutils/chat:  Contributed by
	  by Vladimir Komendantskiy (2019-01-29).
	* apps/examples/ubloxmodem:  app to control the power state of the
	  modem in nsh.  From  Vladimir Komendantskiy (2019-01-31).
