@@ -84,7 +84,6 @@ source "$APPSDIR/examples/udp/Kconfig"
 source "$APPSDIR/examples/udpblaster/Kconfig"
 source "$APPSDIR/examples/discover/Kconfig"
 source "$APPSDIR/examples/webserver/Kconfig"
-source "$APPSDIR/examples/ubloxmodem/Kconfig"
 source "$APPSDIR/examples/unionfs/Kconfig"
 source "$APPSDIR/examples/usbserial/Kconfig"
 source "$APPSDIR/examples/usbterm/Kconfig"
