@@ -27,6 +27,7 @@ source "$APPSDIR/system/stackmonitor/Kconfig"
 source "$APPSDIR/system/symtab/Kconfig"
 source "$APPSDIR/system/cdcacm/Kconfig"
 source "$APPSDIR/system/composite/Kconfig"
+source "$APPSDIR/system/ubloxmodem/Kconfig"
 source "$APPSDIR/system/usbmsc/Kconfig"
 source "$APPSDIR/system/usbmonitor/Kconfig"
 source "$APPSDIR/system/zmodem/Kconfig"
